@startuml
hide circle
skinparam linetype ortho
skinparam class {
    BackgroundColor White
    BorderColor Black
    ArrowColor Black
}

entity "USERS" as users {
  *userId : TEXT <<PK>>
  --
  username : TEXT <<UNIQUE>>
  email : TEXT <<UNIQUE>>
  hashedPassword : TEXT
  is_admin : INTEGER
  createdAt : TEXT
  lastLogin : TEXT
}

entity "SEARCH_HISTORY" as history {
  *historyId : TEXT <<PK>>
  --
  userId : TEXT <<FK>>
  modelId : TEXT <<FK>>
  queriedUsername : TEXT
  resultLabel : TEXT
  confidenceScore : REAL
  featureImportance : TEXT
  predictedAt : TEXT
  exportedAs : TEXT
}

entity "MODEL_METADATA" as model {
  *modelId : TEXT <<PK>>
  --
  algorithmType : TEXT
  version : TEXT
  accuracy : REAL
  precision_score : REAL
  recall : REAL
  f1Score : REAL
  aucRoc : REAL
  isBestModel : INTEGER
  filePath : TEXT
  trainedAt : TEXT
}

entity "PROFILE_CACHE" as cache {
  *cacheId : TEXT <<PK>>
  --
  username : TEXT <<INDEXED>>
  followersCount : INTEGER
  followingCount : INTEGER
  postsCount : INTEGER
  isPrivate : INTEGER
  isVerified : INTEGER
  hasProfilePicture : INTEGER
  biography : TEXT
  externalUrl : TEXT
  fullName : TEXT
  fetchedAt : TEXT
  expiresAt : TEXT
}

users ||..o{ history
model ||..o{ history

@enduml
